--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,53 @@
+/*generali*/
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body{
+  font-family: 'Montserrat', sans-serif;
+}
+
+/*header*/
+header{
+  background-color: rgba(0, 0, 0, .8);
+  height: 60px;
+  width: calc(100% - 200px);
+  color: white;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  position: fixed;
+  right: 0;
+}
+
+/*main*/
+
+main .container{
+  display: flex;
+}
+
+main .menu-laterale{
+  background-color: black;
+  color: white;
+  width: 200px;
+  height: calc(100vh - 70px);
+}
+
+main .main-content{
+  width: calc(100% - 200px);
+  height: calc(100vh - 70px);
+  overflow-y: auto;
+}
+
+/*footer*/
+footer{
+  height: 70px;
+  width: 100%;
+  background-color: #282828;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
