finished nav menu and added hover

--- a/css/style.css
+++ b/css/style.css
@@ -64,11 +64,14 @@ main .main-content .main-menu{
   margin-top: 90px;
   display: flex;
   justify-content: center;
+
 }
 
 main .main-content .main-menu ul{
   list-style: none;
   display: flex;
+  flex-wrap: wrap; /*non funziona*/
+  flex-shrink: 0;
 }
 
 main .main-content .main-menu ul li{
@@ -78,6 +81,14 @@ main .main-content .main-menu ul li{
   font-weight: bold;
   color: #7c7e83;
   cursor: pointer;
+}
+
+main .main-content .main-menu ul li.active{
+  border-bottom: 3px solid lime;
+}
+
+main .main-content .main-menu ul li:hover{
+  color: white;
 }
 
 
