added button and lateral menu hover

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ header .btn{
   padding: 10px 30px;
   border: 1.5px solid #FFFFFF;
   border-radius: 50px;
-  margin-right: 5px;
+  margin-right: 7px;
 }
 
 header .btn a{
@@ -43,6 +43,10 @@ header .btn a{
   font-size: .75rem;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+header .btn:hover{
+  transform: scale(1.1);
 }
 
 /*main*/
@@ -131,6 +135,11 @@ main .menu-laterale .bottom-menu .profile span{
   font-size: .9rem;
 }
 
+/*effetto hover nel menu laterale*/
+main .menu-laterale li:hover, main .menu-laterale span:hover{
+  color: white;
+  cursor: pointer;
+}
 
 
 /*main content*/
@@ -294,14 +303,14 @@ footer .footer-center .player-top{
 
 footer .footer-center .player-top i{
   color: white;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   padding: 0 10px;
   cursor: pointer;
 }
 
 
 footer .footer-center .player-bottom #pitch{
-  width: 60vh;
+  width: 50vh;
   margin-top: 5px;
 }
 
@@ -329,7 +338,7 @@ footer .footer-right .bar{
 }
 
 footer .footer-right .bar #pitch{
-  width: 17vh;
+  width: 15vh;
   margin-right: 10px;
 }
 
